# zzip

./: README.md  pyproject.toml
tests/: test_zzip.py
zzip/: __init__.py
